Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3938

Test failure on test suite conf-sanity, test_61: getxattr failed: -34

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.5.0
    • Lustre 2.5.0
    • 3
    • 10415

      This issue was created by maloo for Nathaniel Clark <nathaniel.l.clark@intel.com>

      This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/62d75ef0-1b8f-11e3-ae29-52540035b04c.

      The sub-test test_61 failed with the following error:

      trusted.big different after shrinking

      Info required for matching: conf-sanity 61

      This issue is related to LU-3792, but is post LU-3669 patch

      MDS console log:

      22:54:33:Lustre: DEBUG MARKER: save large xattr trusted.big on /mnt/lustre/f.conf-sanity.61
      22:54:33:LustreError: 16198:0:(mdt_xattr.c:134:mdt_getxattr_one()) getxattr failed: -34
      22:54:33:LustreError: 16197:0:(mdt_xattr.c:134:mdt_getxattr_one()) getxattr failed: -34
      

            utopiabound Nathaniel Clark
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: