LU-3938 osd-zfs: Account for ZAP when shrinking an xattr

When an xattr is too big for SA it is put in the ZAP, if it is
replaced with one that fits in SA, the one in ZAP should be removed,
otherwise the object will end up with two xattrs with the same name,
and everything gets confused.

Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: I5d33b9e505c751ec01811217377656171553659d
Reviewed-on: http://review.whamcloud.com/7671
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>